# opencode

python/: DEVELOPMENT.md  LICENSE  README.md  SUMMARY.md  demo_new_auth.py  example.py  pyproject.toml  test_github_copilot.py  test_streaming.py  test_streaming_isolated.py  test_streaming_simple.py  test_tools_integration.py  test_tools_streaming.py  test_tui_streaming.py
python/opencode_python/: __init__.py  app.py  auth.py  bus.py  cli.py  config.py  global_config.py
python/opencode_python/lsp/: __init__.py  client.py  language.py
python/opencode_python/provider/: __init__.py  anthropic_provider.py  github_copilot_provider.py  openai_provider.py  provider.py
python/opencode_python/server/: __init__.py  server.py
python/opencode_python/session/: __init__.py  message.py  mode.py  session.py  system.py
python/opencode_python/tools/: TRANSLATION_SUMMARY.md  __init__.py  bash.py  edit.py  glob.py  grep.py  ls.py  lsp_diagnostics.py  lsp_hover.py  multiedit.py  patch.py  read.py  registry.py  task.py  todo.py  tool.py  webfetch.py  write.py
python/opencode_python/tui/: __init__.py  app.py
python/opencode_python/util/: __init__.py  context.py  error.py  filesystem.py  log.py
python/test_venv/: pyvenv.cfg
python/tests/: __init__.py  test_tools.py
