[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-python"
version = "0.1.0"
description = "AI coding agent, built for the terminal - Python port"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OpenCode Python Port", email = "dev@opencode.ai"}
]
keywords = ["ai", "coding", "agent", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "python-lsp-jsonrpc>=1.1.0",
    "diff-match-patch>=20230430",
    "gitpython>=3.1.40",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "asyncio-mqtt>=0.16.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "watchfiles>=0.21.0",
    "platformdirs>=4.1.0",
    "httpx>=0.26.0",
    "uvicorn>=0.25.0",
    "fastapi>=0.108.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
opencode = "opencode_python.cli:main"

[project.urls]
Homepage = "https://opencode.ai"
Repository = "https://github.com/sst/opencode"
Documentation = "https://opencode.ai/docs"
"Bug Tracker" = "https://github.com/sst/opencode/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["opencode_python*"]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "ICN", "PIE", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["S101", "PLR0913", "PLR0912", "PLR0915", "TRY003", "EM101", "EM102"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]